--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -4,43 +4,42 @@
  */
 // bower:scss
 // endbower
+@import "main/main";
+@import "checkin/check-in";
+@import "encounters/encounters";
+@import "report/report";
 
-@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
+@import url(https://fonts.googleapis.com/css?family=Exo:400,200);
 
-$red-color: #ed4343;
-$red-font: 'Roboto Slab', serif;
+$mars-color: #D82507;
+$mars-font: 'Exo', sans,serif;
 
 html, body {
   width:100%;
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: $red-font;
-}
-
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+  font-family: $mars-font;
+  font-size: 10px;
 }
 
 .red {
-  color:$red-color;
+  color:$mars-color;
 }
 
-.welcome {
-	
-	height: 100vh;
+h1 {
+  font-family: 'Exo', sans-serif;
+  font-size: 3.5rem;
+  font-weight: 200;
+  color: #fff;
+}
 
-	display:flex;
-	align-items:center;
-	justify-content: center;
-	flex-direction:column;
+.screen-reader {
+  display: none;
+}
 
-	img { width: 42%; }
-  h1  { text-align:center; }
-  
+.all-caps {
+  text-transform: uppercase;
 }
 
 /**
