--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,3 +1,17 @@
-<div class="welcome">
-    <h1>{{ description }}</h1>
+<div class="home">
+  <div class="welcome">
+    <div class="header">
+      <h1 class="all-caps">Mars Colony</h1>
+    </div>
+    <div class="circle-one">
+      <div class="circle-two">
+        <div class="circle-three">
+          <div class="circle-four">
+            <div class="circle-five"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="enter">Click to enter</div>
+  </div>
 </div>
