--- a/src/app/encounters/_encounters.scss
+++ b/src/app/encounters/_encounters.scss
@@ -28,12 +28,19 @@
     align-self: center;
   }
 
+  .report-wrapper {
+    overflow-y: auto;
+    flex: 0 1 70%;
+    max-height: 500px;
+  }
+
   .encounters-report {
     font-family: 'Exo', sans-serif;
     font-size: 1.5rem;
     font-weight: 200;
     color: #000;
-    padding: 0rem 2rem;
+    list-style: none;
+    padding: 1rem 0rem;
   }
 
   footer {
