--- a/src/app/encounters/encounters.html
+++ b/src/app/encounters/encounters.html
@@ -10,7 +10,7 @@
       </li>
     </ul>
   </div>
-  <button>
+  <button ng-click="reportEncounters($event)">
     <h1>Report<br>
       Encounters
     </h1>
