--- a/src/app/checkin/check-in.html
+++ b/src/app/checkin/check-in.html
@@ -1,6 +1,6 @@
 <div class="check-in">
   <h1>Register</h1>
-  <div>
+  <form name="checkinForm" ng-clas="{ 'show-validation' : validate }">
     <label>Name:</label>
     <input type="text" name="name" placeholder="Name" ng-model="colonist.name" />
     <label>Age:</label>
@@ -14,5 +14,5 @@
       <h1>Check in</h1>
     </button>
     {{ colonist.id }}
-  </div>
+  </form>
 </div>
