--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,17 +1,19 @@
-<div class="home">
+<div class="home" ui-view="{{ stateName }}" ng-controller="MainCtrl">
   <div class="welcome">
     <div class="header">
       <h1 class="all-caps">Mars Colony</h1>
     </div>
-    <div class="circle-one">
-      <div class="circle-two">
-        <div class="circle-three">
-          <div class="circle-four">
-            <div class="circle-five"></div>
+    <button ng-click="enter($event)">
+      <div class="circle-one">
+        <div class="circle-two">
+          <div class="circle-three">
+            <div class="circle-four">
+              <div class="circle-five"></div>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </button>
     <div class="enter">Click to enter</div>
   </div>
 </div>
