Add report POST

--- a/src/app/report/report.html
+++ b/src/app/report/report.html
@@ -5,9 +5,9 @@
   </header>
   <div>
     <label>Select alien type</label>
-    <select name="alien type" ng-model="aliens.type">
+    <select name="alien type" ng-model="encounters.atype">
       <option value="">Select alien type</option>
-      <option value="{{ alien.id }}" ng-repeat="alien in aliens">
+      <option value="{{ alien.type }}" ng-repeat="alien in aliens">
         {{ alien.type }}
       </option>
     </select>
