--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,4 +1,4 @@
-<div class="home" ui-view="{{ stateName }}" ng-controller="MainCtrl">
+<div class="home" ui-view="{{ stateName }}">
   <div class="welcome">
     <div class="header">
       <h1 class="all-caps">Mars Colony</h1>
