--- a/src/app/report/report.html
+++ b/src/app/report/report.html
@@ -4,7 +4,7 @@
     <p class="tagline">Safety on Mars is your responsibility</p>
   </header>
   <div>
-    <label>Select alien type</label>
+    <!-- <label>Select alien type</label> -->
     <select name="alien type" ng-model="encounters.atype">
       <option value="">Select alien type</option>
       <option value="{{ alien.type }}" ng-repeat="alien in aliens">
