--- a/src/app/checkin/_check-in.scss
+++ b/src/app/checkin/_check-in.scss
@@ -5,54 +5,97 @@
   display: flex;
   flex-direction: column;
 
-    p {
-      font-size: 1.5rem;
-      color: #fff;
-    }
+  header {
+    align-self: center;
+    margin: 2rem 0rem;
+  }
 
   h1 {
     align-self: center;
   }
 
-  form {
+  .checkin-form {
     width: 80vw;
     align-self: center;
     display: flex;
     flex-direction: column;
 
-    input select option {
+    input {
       font-family: 'Exo', sans-serif;
       font-size: 2rem;
       color: red;
-      width: 80%;
+      background-color: #000;
+      border: none;
+      border-bottom: 1px solid red;
+      outline: none;
       padding: 1rem;
-      margin: 1rem 1rem;
+      margin-bottom: 3rem;
+
+      &::placeholder {
+        color: red;
+      }
+    }
+
+    .job-select {
+      border-bottom: 1px solid red;
+
+      select {
+        font-family: 'Exo', sans-serif;
+        font-size: 2rem;
+        color: red;
+        background-color: #000;
+        border-radius: 0%;
+        border: none;
+        outline: none;
+        padding: 1rem;
+        -webkit-appearance: none;
+        width: 100%;
+
+        &::placeholder {
+          color: red;
+        }
+      }
+    }
+
+    p {
+      font-family: 'Exo', sans-serif;
+      font-size: 1.5rem;
+      color: #fff;
+      margin-top: 4rem;
+    }
+
+    button {
+      background-color: rgba(0, 0, 0, 0);
+      border: none;
+      outline: none;
+      margin-top: 3rem;
+      display: flex;
+      justify-content: center;
+
+      h1 {
+        color: red;
+      }
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
   .checkin-form input.ng-invalid.ng-touched {
-    animation: border 2s infinite;
-    margin: 1rem;
+    animation: border 1s infinite;
   }
-
-  // .checkin-form input.ng-valid.ng-touched {
-  //   background-color: #78FA89;
-  // }
 
   .checkin-form select.ng-invalid.ng-touched {
-    background-color: #E22569;
+    animation: border 1s infinite;
   }
 
-  // .invalid {
-  //   animation: border 1s infinite;
-  // }
-  //
   @keyframes border {
     0% {
-      box-shadow: 2px 2px 2px 1px rgba(255, 0, 0, 0);
+      box-shadow: 0px 0px 10px 3px rgba(255, 0, 0, 0);
     }
     100% {
-      box-shadow: 2px 2px 2px 1px rgba(255, 0, 0, 1);
+      box-shadow: 0px 0px 10px 3px rgba(255, 0, 0, 0.75);
     }
   }
 }
