--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,8 +1,8 @@
 <div class="home" ui-view="{{ stateName }}">
   <div class="welcome">
-    <div class="header">
+    <header>
       <h1 class="all-caps">Mars Colony</h1>
-    </div>
+    </header>
     <button ng-click="enter($event)">
       <div class="circle-one">
         <div class="circle-two">
@@ -14,6 +14,6 @@
         </div>
       </div>
     </button>
-    <div class="enter">Click to enter</div>
+    <div class="enter">Click on Mars to enter</div>
   </div>
 </div>
