--- a/src/app/report/_report.scss
+++ b/src/app/report/_report.scss
@@ -4,10 +4,10 @@
   background-color: #000;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 
   header {
     align-self: center;
+    margin-bottom: 2rem;
 
     h2 {
       font-family: 'Exo', sans-serif;
@@ -34,9 +34,26 @@
     display: flex;
     flex-direction: column;
 
-    select {
-      padding: 1rem;
-      margin: 1rem 1rem;
+    .alien-select {
+      border-bottom: 1px solid red;
+      margin-bottom: 2rem;
+
+      select {
+        font-family: 'Exo', sans-serif;
+        font-size: 2rem;
+        color: red;
+        background-color: #000;
+        border-radius: 0%;
+        border: none;
+        outline: none;
+        padding: 1rem;
+        -webkit-appearance: none;
+        width: 100%;
+
+        &::placeholder {
+          color: red;
+        }
+      }
     }
 
     textarea {
@@ -44,14 +61,50 @@
       font-size: 2rem;
       font-weight: 200;
       color: red;
+      background-color: rgba(255, 255, 255, 0.15);
       height: 30vh;
       padding: 1rem;
-      margin: 1rem 1rem;
+      border: 0;
+      outline: 0;
+
+      &::placeholder {
+        color: red;
+      }
     }
   }
 
-  footer {
-    align-self: center;
-    cursor: pointer;
+  p {
+    font-family: 'Exo', sans-serif;
+    font-size: 1.5rem;
+    color: #fff;
+    margin-top: 4rem;
+  }
+
+  button {
+    background-color: #000;
+    border: none;
+    outline: none;
+    margin-top: 2rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  .report-form select.ng-invalid.ng-touched {
+    animation: border 1s infinite;
+  }
+
+  .report-form textarea.ng-invalid.ng-touched {
+    animation: border 1s infinite;
+  }
+
+  @keyframes border {
+    0% {
+      box-shadow: 0px 0px 10px 3px rgba(255, 0, 0, 0);
+    }
+    100% {
+      box-shadow: 0px 0px 10px 3px rgba(255, 0, 0, 0.75);
+    }
   }
 }
