--- a/src/app/encounters/_encounters.scss
+++ b/src/app/encounters/_encounters.scss
@@ -52,8 +52,13 @@
     border: 0px;
     outline: 0px;
 
-    &:hover {
-      cursor: pointer;
+    h1 {
+      color: red;
+
+      &:hover {
+        cursor: pointer;
+        color: #fff;
+      }
     }
   }
 }
