Fix width on Encounters page

--- a/src/app/encounters/_encounters.scss
+++ b/src/app/encounters/_encounters.scss
@@ -6,6 +6,7 @@
 
   header {
     text-align: center;
+    width: 100%;
     margin: 0 auto;
   }
 
@@ -28,6 +29,7 @@
   .report-wrapper {
     overflow-y: auto;
     max-height: 35rem;
+    width: 100%;
   }
 
   .encounters-report {
