--- a/src/app/encounters/encounters.html
+++ b/src/app/encounters/encounters.html
@@ -11,8 +11,6 @@
     </ul>
   </div>
   <button ng-click="reportEncounters($event)">
-    <h1>Report<br>
-      Encounters
-    </h1>
+    <h1>Report Encounters</h1>
   </button>
 </div>
